// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHorizontalBarSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--bar "
            transform="translate(2,2)"
          >
            <rect
              height="83.3"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="105.35"
            />
            <rect
              height="83.3"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="7.350000000000001"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalBarSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--bar "
            transform="translate(2,2)"
          >
            <rect
              height="83.3"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="0"
              x="0"
              y="105.35"
            />
            <rect
              height="83.3"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="596"
              x="0"
              y="7.350000000000001"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalBarSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--bar "
            transform="translate(2,2)"
          >
            <rect
              height="33.319999999999986"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="94.08000000000001"
            />
            <rect
              height="33.319999999999986"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="133.28"
            />
          </g>
        </g>
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--bar "
            transform="translate(2,2)"
          >
            <rect
              height="33.319999999999986"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="88.19999999999999"
            />
            <rect
              height="33.319999999999986"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="29.400000000000006"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
